feat (vite): server using vite

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/static/css/global.css" />
 </head>
 <body>
-    Test2 
-    <script src="/static/js/script.js"></script>
+    Test2
+    <div id="app"></div>
+    <script type="module" src="/static/js/script.js"></script>
 </body>
 </html>
